correct buttons & compile instructions